Fixed min-height so a full list of favorites won't collapse and added height to the header too

--- a/frontend/src/component/ContentListItem.styl
+++ b/frontend/src/component/ContentListItem.styl
@@ -7,7 +7,7 @@
   display flex
   justify-content space-between
   color fontColor
-  height 65px
+  min-height 65px
   align-items center
   & > *
     margin 0 8px
