--- a/frontend/src/css/Favorites.styl
+++ b/frontend/src/css/Favorites.styl
@@ -4,7 +4,7 @@
 .favoritesHeader
   display flex
   width 100%
-  height 60px
+  min-height 65px
   justify-content space-between
   align-items center
   & > *
